# fixedpoint

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  changelog.md  readme.md  readthedocs.yml  setup.cfg  setup.py  test.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: requirements.txt
docs/source/: FixedPointBits.rst  FixedPointclass.rst  PropertyResolver.rst  arithmetic.rst  basics.rst  conf.py  context-management.rst  doctest_setup.py  exceptions.rst  fixedpoint.rst  functions.rst  index.rst  initialization.rst  long_description.rst  miscellaneous.rst  operators.rst  resizing.rst  slicing.rst  string-formatting.rst
docs/source/_static/css/: admonition-example.css  purple-text.css
fixedpoint/: __init__.py  fixedpoint.py  functions.py  json.py  logging.py  properties.py
fpstats/: __init__.py  __main__.py  from_bigquery.py  from_pypi.py
tests/: __init__.py  __main__.py  gen_data.m  init.py  mypy.ini  tools.py
tests/test_alerts/: __init__.py
tests/test_bit_resizing/: __init__.py  test_ceil.m  test_clamp.m  test_convergent.m  test_keep_lsbs.m  test_keep_msbs.m  test_overflow_handling.m  test_resize.m  test_round.m  test_round_builtin.m  test_round_down.m  test_round_in.m  test_round_nearest.m  test_round_out.m  test_round_up.m  test_rounding.m  test_wrap.m
tests/test_builtin_functions_and_type_conversion/: __init__.py
tests/test_functions/: __init__.py
tests/test_initialization_methods/: __init__.py  test_initfloat_convergent.m  test_initfloat_down.m  test_initfloat_in.m  test_initfloat_nearest.m  test_initfloat_out.m  test_initfloat_up.m  test_rounding.m
tests/test_miscellaneous/: __init__.py
tests/test_operators/: __init__.py  test_addition.m  test_division.py  test_multiplication.m  test_operators.m  test_subtraction.m
tests/test_property_accessors_and_mutators/: __init__.py
tests/test_property_resolver/: __init__.py
