[metadata]
name = fixedpoint
url = https://fixedpoint.readthedocs.io/
download_url = https://pypi.org/project/fixedpoint/
project_urls =
	Bug Tracker = https://github.com/Schweitzer-Engineering-Laboratories/fixedpoint/issues
	Documentation = https://fixedpoint.readthedocs.io/
	Source Code = https://github.com/Schweitzer-Engineering-Laboratories/fixedpoint
author = Zack Sheffield
author_email = zack_sheffield@selinc.com
maintainer = Zack Sheffield
maintainer_email = zack_sheffield@selinc.com
classifiers =
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Topic :: Software Development :: Embedded Systems
	Typing :: Typed
license = BSD
license_file = LICENSE
description = Fixed point arithmetic library
keywords =
	fixed-point
	arithmetic
	binary
	bit-accurate

[options]
zip_safe = False
packages =
	fixedpoint
include_package_data = True

python_requires = >=3.8
tests_require =
	nose>=1.3.7
	coverage>=5.0.3
	mypy>=0.761
	tqdm>=4.43.0
	sphinx==2.4.4
    sphinx-rtd-theme==0.4.3
	numpy>=1.18.1
test_suite = nose.collector
setup_requires =
	nose>=1.3.7
	wheel>=0.30.0

[options.package_data]
fixedpoint = py.typed

[options.extras_require]
docs =
	sphinx==2.4.4
	sphinx-rtd-theme==0.4.3
test_dependencies =
	nose>=1.3.7
	coverage>=5.0.3
	mypy>=0.761
	tqdm>=4.43.0
	sphinx==2.4.4
    sphinx-rtd-theme==0.4.3
	numpy>=1.18.1

[nosetests]
nologcapture = True
no-byte-compile = True
detailed-errors = True
with-coverage = True
cover-erase = True
cover-branches = True
cover-package = fixedpoint
cover-html = True
cover-html-dir = tests/COVERAGE
verbosity = 2
with-id = True
id-file = tests/.noseids

[aliases]
dist = bdist_wheel sdist

